--- a/index.html
+++ b/index.html
@@ -24,8 +24,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/ScrollTrigger.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/ScrollToPlugin.min.js"></script>
 
-
-    
     <!-- full page css -->
     <link
       rel="stylesheet"
@@ -289,7 +287,6 @@
         </div>
       </section>
     </div>
-
 
     <section class="sec_3">
       <div class="img_box">
@@ -1535,6 +1532,9 @@
       /* 섹션2 끝 */
 
       /* 섹션3 시작 */
+      .sec_3 {
+        margin-top: 300vh;
+      }
 
       /* 섹션3 끝 */
 
